# awesome-selfhosted

./: .gitignore  BENCHMARK_V1.md  SHERLOCK_CAPABILITIES.md  alpha_mind_gamma_model.py  codex_access_manager.py  codex_data_access.py  crime_model_grid_search.py  crime_model_pipeline.py  crime_prediction_pipeline.py  emoji_parser.py  extreme-theory-framework.md  mental_matrix_ai.py  mm_language.py  mm_language_framework.py  mm_project_router.py  project_cleaner.py  pyproject.toml  quantum_lucidity.py  sacred_geometry.py  sacred_geometry_ai.py  sacred_geometry_notes.md  sacred_geometry_toolkit.py  sacred_geometry_tools.py  sherlock_ai.py  sherlock_ai_framework.py  sherlock_ai_refactor.py  sherlock_crime_pipeline.py  sherlock_crime_solver.py  sherlock_dataset_builder.py  sherlock_evaluation.py  sherlock_image_pipeline.py  sherlock_live_workflow.py  sherlock_multimodal.py  sherlock_multimodal_training.py  sherlock_pipeline.py  sherlock_principle_data.wl  sherlock_quantum_bio.py  sherlock_training_data.py  sherlock_vision_training.py  test_emoji_parser.py  (+5 more)
_static/: dodecahedron_12d.html
configs/: compliance_policy.json  legal_corpora_sources.yaml
data/: test_alpha_training.jsonl
scripts/: benchmark_snapshot.py  build_legal_corpus_manifest.py  build_sherlock_training_dataset.py  classify_repository_files.py  ingest_and_annotate_images.py  sherlock_ai.py  train_sherlock_multimodal.py  train_sherlock_vision.py  validate_training_data.py
sherlock_compliance/: __init__.py  audit.py  guard.py  models.py  osint.py  policy.py
tests/: test_alpha_mind_gamma_model.py  (+28 more)
(+14 files in other folders)
